# Crawler

./: .gitignore  ReadMe.md  firebase.py  linkedin_link_scraper.py  main.py  pyproject.toml  scraper.py
secrets/: config.example.ini
utils/: __init__.py  clutch.py  common.py  linkedIn.py  mongo.py
